--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.125.0",
     "firebase-admin>=6.6.0",
+    "httpx>=0.28.0",
     "python-dotenv>=1.0.0",
     "ruff>=0.14.10",
     "uvicorn>=0.38.0",
