--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.12.0",
     "fastapi>=0.125.0",
     "firebase-admin>=6.6.0",
+    "google-cloud-tasks>=2.16.0",
     "httpx>=0.28.0",
+    "pyjwt>=2.9.0",
     "python-dotenv>=1.0.0",
     "ruff>=0.14.10",
     "uvicorn>=0.38.0",
