--- a/expo-app/app.json
+++ b/expo-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-app",
-    "slug": "expo-app",
+    "name": "LinkMind",
+    "slug": "linkmind",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,7 +9,7 @@
     "userInterfaceStyle": "automatic",
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.expoapp",
+      "bundleIdentifier": "xyz.alexchoi.bookmarksapp",
       "googleServicesFile": "./GoogleService-Info.plist",
       "entitlements": {
         "aps-environment": "production"
@@ -24,7 +24,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.yourcompany.expoapp",
+      "package": "xyz.alexchoi.bookmarksapp",
       "googleServicesFile": "./google-services.json",
       "permissions": ["NOTIFICATIONS"]
     },
