--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@invertase/react-native-apple-authentication": "^2.4.0",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/auth": "^23.7.0",
     "@react-native-firebase/firestore": "^23.7.0",
     "@react-native-firebase/messaging": "^23.7.0",
+    "@react-native-google-signin/google-signin": "^14.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
