--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "check": "npm run lint && npm run format:check && npm run typecheck"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
